--- a/dynamodb-amazonka.cabal
+++ b/dynamodb-amazonka.cabal
@@ -62,8 +62,8 @@ executable dynamodb-amazonka
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:
-      DynamoDB
+    other-modules:    DynamoDB
+                    , LambdaFn
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -78,6 +78,8 @@ executable dynamodb-amazonka
                     , resourcet
                     , text
                     , unordered-containers
+                    , aws-lambda-haskell-runtime >= 4.0.0
+                    , aeson
 
 
     -- Directories containing source files.
